{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 72,
  "lineage": "1544bde2-f123-c132-9d8d-c8be8554d5e9",
  "resources": [
    {
      "module": "module.Teasting-Env",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287992742175:internet-gateway/igw-0ad9856b63a8c4c8f",
            "id": "igw-0ad9856b63a8c4c8f",
            "owner_id": "287992742175",
            "tags": {
              "Name": "Testvpc-1-igw"
            },
            "tags_all": {
              "Name": "Testvpc-1-igw"
            },
            "vpc_id": "vpc-07ff5ab49e05b3139"
          },
          "dependencies": [
            "module.Teasting-Env.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.Teasting-Env",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287992742175:route-table/rtb-05a4efb22eaa5f45f",
            "id": "rtb-05a4efb22eaa5f45f",
            "owner_id": "287992742175",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ad9856b63a8c4c8f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Test_env_table-testing"
            },
            "tags_all": {
              "Name": "Test_env_table-testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ff5ab49e05b3139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Teasting-Env.aws_internet_gateway.default",
            "module.Teasting-Env.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.Teasting-Env",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b4bff09282923ec",
            "route_table_id": "rtb-05a4efb22eaa5f45f",
            "subnet_id": "subnet-0561a4f7875cf5de5"
          },
          "dependencies": [
            "module.Teasting-Env.aws_internet_gateway.default",
            "module.Teasting-Env.aws_route_table.terraform-public",
            "module.Teasting-Env.aws_subnet.subnet1-public",
            "module.Teasting-Env.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.Teasting-Env",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287992742175:security-group/sg-03656d22dc08ed3ef",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03656d22dc08ed3ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "287992742175",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07ff5ab49e05b3139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Teasting-Env.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.Teasting-Env",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287992742175:subnet/subnet-0561a4f7875cf5de5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0561a4f7875cf5de5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "287992742175",
            "tags": {
              "Name": "Test_env_Subnet1-testing"
            },
            "tags_all": {
              "Name": "Test_env_Subnet1-testing"
            },
            "vpc_id": "vpc-07ff5ab49e05b3139"
          },
          "dependencies": [
            "module.Teasting-Env.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.Teasting-Env",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287992742175:subnet/subnet-095745b70fb5acb0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-095745b70fb5acb0a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "287992742175",
            "tags": {
              "Name": "Test_env_Subnet2-testing"
            },
            "tags_all": {
              "Name": "Test_env_Subnet2-testing"
            },
            "vpc_id": "vpc-07ff5ab49e05b3139"
          },
          "dependencies": [
            "module.Teasting-Env.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.Teasting-Env",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287992742175:subnet/subnet-06dbade405b276123",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-06dbade405b276123",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "287992742175",
            "tags": {
              "Name": "Test_env_Subnet3-testing"
            },
            "tags_all": {
              "Name": "Test_env_Subnet3-testing"
            },
            "vpc_id": "vpc-07ff5ab49e05b3139"
          },
          "dependencies": [
            "module.Teasting-Env.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.Teasting-Env",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287992742175:vpc/vpc-07ff5ab49e05b3139",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-05f61f0214dca4b50",
            "default_route_table_id": "rtb-02d447e5775201ef1",
            "default_security_group_id": "sg-091d02912a1ea6f1f",
            "dhcp_options_id": "dopt-0d87ce42226ab5633",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07ff5ab49e05b3139",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02d447e5775201ef1",
            "owner_id": "287992742175",
            "tags": {
              "Name": "Testvpc-1",
              "Owner": "Sree"
            },
            "tags_all": {
              "Name": "Testvpc-1",
              "Owner": "Sree"
            }
          }
        }
      ]
    }
  ]
}